--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2019 - Inventory Management - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Inventory Management - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy- Phan Viết Thê</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.js"></script>
